<resources>

    <string name="app_name">OPS Fiscalize</string>

    <!-- Nota Fiscal   -->
    <string name="exception_detalhes_nota_fiscal">Nenhuma nota fiscal disponível! Tente mais tarde!</string>

    <string name="label_cota">Cota:</string>
    <string name="label_descricao">Descrição:</string>
    <string name="label_uf">UF:</string>
    <string name="label_data_emissao">Emissão:</string>
    <string name="label_beneficiario">Beneficiário:</string>
    <string name="label_cpf_cnpj">CPF/CPNJ:</string>
    <string name="label_numero_documento">Nº Documento:</string>
    <string name="label_pedido_reembolso">Pedido:</string>
    <string name="label_valor">Valor:</string>
    <string name="label_valor_glosa">Valor Glosa:</string>
    <string name="label_valor_liquido">Valor Líquido:</string>

    <!-- BOTOES -->
    <string name="label_suspeita">Suspeita</string>
    <string name="label_limpa">Limpa</string>
    <string name="label_nao_sei">Não sei! Quero analisar outra nota.</string>
    <string name="label_recarregar">Recarregar</string>
    <string name="label_sim">Sim</string>
    <string name="label_nao">Não</string>

    <!-- PERGUNTAS -->
    <string name="label_suspeita_valor">O VALOR é suspeito?</string>
    <string name="label_suspeita_objeto">O OBJETO COMPRADO é suspeito?</string>
    <string name="label_suspeita_beneficiario">O BENEFICIÁRIO é suspeito?</string>

    <!-- MENSAGENS -->
    <string name="mensagem_nota_suspeita">Esta nota é suspeita!</string>
    <string name="mensagem_nota_limpa">Esta nota é limpa!</string>
    <string name="mensagem_aguarde">Aguarde!</string>

    <!-- ERROS -->
    <string name="erro_adicionar_suspeita">Impossível adicionar! Tente novamente!</string>

    <!-- Login -->
    <string name="login_cadastro">Cadastre-se</string>
    <string name="login_usuario">Usuário</string>
    <string name="login_senha">Senha</string>

    <string name="exception_usuario_resgatar">Usuário inválido!</string>
    <string name="exception_usuario_salvar">Impossível salvar usuário!</string>
    <string name="exception_usuario_deletar">Impossível deletar usuário!</string>

    <!-- Estatisticas -->
    <string name="exception_estatisticas_resgatar">Impossível resgatar estatísticas das preferências!</string>
    <string name="exception_estatisticas_salvar">Impossível salvar estatísticas nas preferências!</string>

    <!-- Configuracoes -->
    <string name="exception_configuracoes_resgatar">Impossível resgatar configurações das preferências!</string>
    <string name="exception_configuracoes_salvar">Impossível salvar configurações nas preferências!</string>

    <!-- Exceptions Geral -->
    <string name="exception_rest">Erro ao contatar servidor!</string>
    <string name="exception_comunicacao">Falha na comunicação!</string>

</resources>
