<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/view_group_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center">

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminate="true"
            style="@android:style/Widget.ProgressBar.Large"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/margin_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_foto_parlamentar"
                    android:layout_width="100dp"
                    android:layout_height="125dp"
                    android:layout_margin="@dimen/margin_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_nome_parlamentar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    android:gravity="center"
                    style="@style/Text" />

                <TextView
                    android:id="@+id/text_email_parlamentar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    style="@style/Text" />

                <ImageView
                    android:id="@+id/image_foto_partido"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <TextView
                    android:id="@+id/text_nome_partido"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_big"
                    android:layout_height="wrap_content"
                    style="@style/Text"/>

                <TextView
                    android:id="@+id/text_sigla_partido"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/text_small"
                    android:layout_height="wrap_content"
                    style="@style/Text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_big">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cota"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/text_cota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                style="@style/Text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_descricao"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/text_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                style="@style/Text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fornecedor"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/text_fornecedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                style="@style/Text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_data_emissao"
                    style="@style/TextLabel" />

                <TextView
                    android:id="@+id/text_data_emissao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    style="@style/Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_reembolso"
                    style="@style/TextLabel" />

                <TextView
                    android:id="@+id/text_reembolso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    style="@style/Text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cpf_cnpj"
                    style="@style/TextLabel" />

                <TextView
                    android:id="@+id/text_cpf_cnpj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    style="@style/Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_uf"
                    style="@style/TextLabel" />

                <TextView
                    android:id="@+id/text_uf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    style="@style/Text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_numero_documento"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/text_numero_documento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                style="@style/Text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_valor"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/text_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/vermelho"
                android:layout_marginLeft="@dimen/margin_small"
                style="@style/Text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_valor_glosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_valor_glosa"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/text_valor_glosa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                style="@style/Text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_valor_liquido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_valor_liquido"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/text_valor_liquido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                style="@style/Text" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
